--- a/locallibrary/catalog/templates/book_list.html
+++ b/locallibrary/catalog/templates/book_list.html
@@ -1,4 +1,5 @@
 {% extends "base_generic.html"%}
+{%block title %}<title> Book List </title> {% endblock %}
 
 {% block content %}
     <h1>Book List</h1>
