--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h1>Local Library Home</h1>
     <p> Welcome to Local Library </p>
+    <strong>Number of Visits:</strong> {{ num_visits }}
     <h2>Dynamic Content</h2>
     <p>The library has the following record counts</p>
     <ul>
