--- a/locallibrary/templates/registration/login.html
+++ b/locallibrary/templates/registration/login.html
@@ -38,6 +38,6 @@
         <input type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}"/>
     </form>
-    
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 {% endblock %}
 
