--- a/locallibrary/catalog/templates/book_detail.html
+++ b/locallibrary/catalog/templates/book_detail.html
@@ -9,10 +9,9 @@
   <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
   <p><strong>Language:</strong> {{ book.language }}</p>  
   <p><strong>Genre:</strong> {{ book.genre.all|join:", " }}</p>  
-
+  {% if perms.catalog.can_mark_returned %}
   <div style="margin-left:20px;margin-top:20px">
     <h4>Copies</h4>
-
     {% for copy in book.bookinstance_set.all %}
       <hr>
       <p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">
@@ -25,4 +24,5 @@
       <p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p>
     {% endfor %}
   </div>
+  {% endif %}
 {% endblock %}
