--- a/locallibrary/catalog/templates/author_detail.html
+++ b/locallibrary/catalog/templates/author_detail.html
@@ -17,4 +17,8 @@
             {{book.title}}
         </p>
     {% endfor %}
+    {% if perms.catalog.can_mark_returned %}
+    <a href="{% url 'author-update' author.pk %}">Update Author Details</a> <br/>
+    <a href="{% url 'author-delete' author.pk %}">Delete Author</a>
+    {% endif %}
 {%  endblock %}
