--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -32,7 +32,8 @@
               {% if perms.catalog.can_mark_returned %}
                 <li>Staff</li>
                 <li><a href="{% url 'all-books' %}">All Borrowed Books</a></li>
-              {% endif %}
+                <li><a href="{% url 'author-create' %}">Create Author</a></li>
+                {% endif %}
             </ul>
          {% endblock %}
           </div>
