Book Forms Created

--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -33,6 +33,7 @@
                 <li>Staff</li>
                 <li><a href="{% url 'all-books' %}">All Borrowed Books</a></li>
                 <li><a href="{% url 'author-create' %}">Create Author</a></li>
+                <li><a href="{% url 'book-create' %}">Add Book</a></li>
                 {% endif %}
             </ul>
          {% endblock %}
