--- a/locallibrary/catalog/templates/book_detail.html
+++ b/locallibrary/catalog/templates/book_detail.html
@@ -25,4 +25,8 @@
     {% endfor %}
   </div>
   {% endif %}
+  {% if perms.catalog.can_mark_returned %}
+  <a href="{% url 'book-update' book.id %}">Update Author Details</a> <br/>
+  <a href="{% url 'book-delete' book.id %}">Delete Author</a>
+  {% endif %}
 {% endblock %}
