--- a/locallibrary/catalog/templates/author_list.html
+++ b/locallibrary/catalog/templates/author_list.html
@@ -1,15 +1,26 @@
 {% extends "base_generic.html" %}
 {%block title %}<title> Author List </title> {% endblock %}
 {% block content %}
-    <h1> This is the list of authors </h1>
+<div class="row">
+    <h1 style="margin:10px auto; padding: 20px;">List of Authors</h1>
+</div>
     {% if author_list %}
-        <ul>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Author Name</th>
+            </tr>
+        </thead>
+        <tbody>
             {% for author in author_list %}
-            <li>
-                <a href="{{author.get_absolute_url}}">{{author.first_name}}</a> {{author.last_name}} 
-            </li>
+            <tr>
+                <td>
+                    <a href="{{author.get_absolute_url}}">{{author.first_name}}</a> {{author.last_name}}   
+                </td>    
+            </tr>
             {% endfor %}
-        </ul>
+        </tbody>
+    </table>
     {% else %}
       <p>There are no author available</p>
     {% endif %}
