--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -16,22 +16,26 @@
           {% block sidebar %}
             <ul class="sidebar-nav">
               <li><a href="{% url 'index' %}">Home</a></li>
-              <li><a href="{% url 'books' %}">All books</a></li>
-              <li><a href="{% url 'author' %}">All authors</a></li>
-              <br/>
-              {% if not perms.catalog.can_mark_returned %}
-                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+              {% if perms.catalog.can_loan_book or perms.catalog.can_mark_returned %}    
+                <li><a href="{% url 'books' %}">All books</a></li>
+                <li><a href="{% url 'author' %}">All authors</a></li>
               {% endif %}
+              {% if perms.catalog.can_loan_book %}             
+                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+                <li><a href="{% url 'borrow-book' %}">Borrow a New Book</a></li>
+              {% endif%}
+              
+              <br/>
               {% if user.is_authenticated %}
                 <li>User: {{ user.get_username }}</li>
-                <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+                <li><a href="{% url 'logout'%}">Logout</a></li>   
               {% else %}
                 <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
               {% endif %} 
               <br/>
               {% if perms.catalog.can_mark_returned %}
                 <li>Staff</li>
-                <li><a href="{% url 'all-books' %}">All Borrowed Books</a></li>
+                <li><a href="{% url 'all-books-inst' %}">All Borrowed Books</a></li>
                 <li><a href="{% url 'author-create' %}">Create Author</a></li>
                 <li><a href="{% url 'book-create' %}">Add Book</a></li>
                 {% endif %}
