--- a/locallibrary/catalog/templates/book_detail.html
+++ b/locallibrary/catalog/templates/book_detail.html
@@ -2,15 +2,16 @@
 {%block title %}<title> Book Detail </title> {% endblock %}
 
 {% block content %}
-  <h1>Title: {{ book.title }}</h1>
-
+  <div class="row">
+    <h1 style="margin:10px auto; padding: 20px;">Title: {{ book.title }}</h1>
+  </div>
   <p><strong>Author:</strong> <a href="{% url 'author-detail' book.author.pk %}">{{ book.author }}</a></p> <!-- author detail link not yet defined -->
   <p><strong>Summary:</strong> {{ book.summary }}</p>
   <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
   <p><strong>Language:</strong> {{ book.language }}</p>  
   <p><strong>Genre:</strong> {{ book.genre.all|join:", " }}</p>  
   {% if perms.catalog.can_mark_returned %}
-  <div style="margin-left:20px;margin-top:20px">
+  <div style="margin-top:20px">
     <h4>Copies</h4>
     {% for copy in book.bookinstance_set.all %}
       <hr>
