--- a/locallibrary/catalog/templates/book_list.html
+++ b/locallibrary/catalog/templates/book_list.html
@@ -1,16 +1,36 @@
 {% extends "base_generic.html"%}
+
 {%block title %}<title> Book List </title> {% endblock %}
 
 {% block content %}
-    <h1>Book List</h1>
+    <div class="row">
+        <h1 style="margin:10px auto; padding: 20px;"> Books List </h1>
+    </div>
     {% if book_list %}
-    <ul>
-        {% for book in book_list %}
-        <li>
-            <a href="{{ book.get_absolute_url }}">{{book.title}}</a> ({{book.author}})
-        </li>
-        {% endfor %}
-    </ul>
+    <table class="table">
+        <thead>
+            <tr>
+            <th scope="col">Book Name</th>
+            <th scope="col">Author</th>
+            <th scope="col">Availability</th>
+            {% if perms.catalog.can_loan_book %}
+                <th scope="col"> Borrow/Loan </th>       
+            {% endif %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for book in book_list %}
+            <tr>
+                <td><a href="{{book.get_absolute_url}}">{{book.title}}</a></td>
+                <td>{{book.author}}</td>
+                <td>Available</td>
+                {% if perms.catalog.can_loan_book %}
+                    <td><a href="">Borrow</a></td> 
+                {% endif %}            
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     {% else %}
         <p>
             There are no books in the library
